<resources>
    <string name="host_ok">OK</string>
    <string name="host_confirm">Confirm</string>
    <string name="app_name_host">Host (Device Connect Device Plug-in)</string>
    <string name="app_name_camera">Host Camera</string>
    <string name="app_name_screencast">Host Screencast</string>
    <string name="shuttered">Shuttered</string>
    <string name="started_video_recording">Started recording</string>
    <string name="stopped_video_recording">Stopped recording</string>
    <string name="zoomin">Zoomin</string>
    <string name="zoomout">Zoomout</string>
    <string name="stop_btn">Stop</string>
    <string name="touch_activity">Touch Activity</string>
    <string name="canvas_profile_view_close_guidance">tap to close.</string>
    <string name="keyevent_activity">Key Event Activity</string>
    <string name="host_error_permission_title">Permission Error</string>
    <string name="host_error_permission_message">The permission to run the app was not granted, so quit the application.</string>
    <string name="host_error_positive">OK</string>
    <string name="host_error_negative">NG</string>
    <string name="host_error_cancel">Cancel</string>
    <string name="host_error_usage_stats_title">Usage Stats</string>
    <string name="host_error_usage_stats_message">Couldn\'t get usage stats permission. </string>
    <string name="host_manager_starting_confirm">Connecting to Device Connect Manager</string>
    <string name="host_manager_permission_confirm">Need to get the following permissions to use with this app.\n    -Taking photos and videos\n    - Audio recording\n    - Access to external storage\n\nNeed to get the following permissions to get mobile network traffic.\n    - Read phone state</string>
    <string name="host_manager_permission_button">Permission</string>
    <string name="host_manager_usage_stats_confirm">Need to get permission for usage stats to get network traffic.</string>
    <string name="host_manager_usage_stats_button">Open usage stats</string>
    <string name="host_manager_main_button">Launch to app</string>
    <string name="host_camera_running">LIVE</string>
    <string name="host_recorder_running">Cannot switch to another recorder during camera running.</string>
    <string name="host_recorder_failed_to_broadcast">Failed to start a broadcast.</string>
    <string name="host_recorder_failed_to_start_preview">Failed to start a preview server.</string>
    <string name="host_recorder_failed_to_start_recording">Failed to start a recording.</string>
    <string name="host_recorder_failed_to_take_photo">Failed to take a photo.</string>
    <string name="host_recorder_deny_permission">Screencast permissions are denied.</string>
    <string name="overlay_preview">PREVIEW</string>
    <string name="overlay_preview_ticker">Start the camera</string>
    <string name="overlay_preview_channel_id">org.deviceconnect.android.intent.action.preview.host</string>
    <string name="overlay_preview_channel_title">Device Connect Preview</string>
    <string name="overlay_preview_channel_message">Preview with DeviceConnect.</string>
    <string name="overlay_preview_content_title">Running a preview Server [ %1$s ]</string>
    <string name="overlay_preview_content_message">You can stop the capture by click.</string>
    <string name="overlay_preview_content_message2">Being captured by the camera.</string>
    <string name="overlay_no_permission_title">Permission</string>
    <string name="overlay_no_permission_message">You have not been granted permission to view the overlay. \ nDo you want to open the settings screen?</string>
    <string name="overlay_no_permission_ok">Yes</string>
    <string name="overlay_no_permission_no">No</string>
    <string name="overlay_preview_delivery">Preview</string>
    <string name="overlay_preview_show">Show preview on screen</string>
    <string name="overlay_preview_hide">Hide preview on screen</string>
    <string name="overlay_preview_stop">Stop preview</string>
    <string name="host_settings_title">Host Settings</string>
    <string name="host_settings_main_app_list">App List</string>
    <string name="host_settings_main_app_camera">Camera</string>
    <string name="host_settings_main_app_screencast">Screencast</string>
    <string name="host_settings_main_plugin">Plugin Settings</string>
    <string name="host_settings_main_plugin_gps">GPS</string>
    <string name="host_settings_main_plugin_usage_stats">Usage Stats</string>
    <string name="host_settings_main_plugin_recorder">Recorder Settings</string>
    <string name="host_settings_main_plugin_recorder_list">Recorder List</string>
    <string name="host_settings_main_plugin_demo">Demo Settings</string>
    <string name="host_settings_main_plugin_demo_page">Demo Page</string>
    <string name="host_recorder_settings_title">Recorder Settings</string>
    <string name="host_recorder_settings_video">Video Settings</string>
    <string name="host_recorder_settings_audio">Audio Settings</string>
    <string name="host_recorder_settings_broadcast">Broadcast Settings</string>
    <string name="host_recorder_settings_mjpeg">MJPEG</string>
    <string name="host_recorder_settings_rtsp">RTSP</string>
    <string name="host_recorder_settings_srt">SRT</string>
    <string name="host_recorder_settings_rtmp">RTMP</string>
    <string name="host_recorder_settings_port">Port Settings</string>
    <string name="host_recorder_settings_server">Server Settings</string>
    <string name="host_recorder_settings_error_not_found_camera_title">Error</string>
    <string name="host_recorder_settings_error_not_found_camera_message">The camera is not connected.</string>
    <string name="host_recorder_settings_error_not_found_camera_btn">OK</string>
    <string name="host_recorder_settings_still_image_resolution">Still Image Resolution</string>
    <string name="host_recorder_settings_preview_resolution">Preview Resolution</string>
    <string name="host_recorder_settings_framerate">Frame rate (fps)</string>
    <string name="host_recorder_settings_orientation">Orientation</string>
    <string name="host_recorder_settings_bitrate">Bitrate (bps)</string>
    <string name="host_recorder_settings_bitrate_mode">Bitrate Mode</string>
    <string name="host_recorder_settings_i_frame_interval">Key frame interval (sec)</string>
    <string name="host_recorder_settings_video_encode">Encoder</string>
    <string name="host_recorder_settings_video_profile_level">Profile - Level</string>
    <string name="host_recorder_settings_use_software_encode">Software encoder</string>
    <string name="host_recorder_settings_use_software_encode_summary">MediaCodec prefers to use the software encoder.</string>
    <string name="host_recorder_settings_auto_focus_mode">Auto Focus</string>
    <string name="host_recorder_settings_white_balance">Auto White Balance</string>
    <string name="host_recorder_settings_white_balance_temperature">Color Temperature</string>
    <string name="host_recorder_settings_auto_exposure">Auto Exposure</string>
    <string name="host_recorder_settings_sensor_exposure_time">Exposure Time</string>
    <string name="host_recorder_settings_sensor_sensitivity">ISO Sensitivity</string>
    <string name="host_recorder_settings_sensor_frame_duration">Frame Duration</string>
    <string name="host_recorder_settings_intra_refresh">Intra Refresh</string>
    <string name="host_recorder_settings_video_stabilization">Stabilization</string>
    <string name="host_recorder_settings_optical_stabilization">Optical Stabilization</string>
    <string name="host_recorder_settings_noise_reduction">Noise Reduction</string>
    <string name="host_recorder_settings_focal_length">Focal Length</string>
    <string name="host_recorder_settings_motion_jpeg">MotionJPEG Settings</string>
    <string name="host_recorder_settings_jpeg_quality">Quality (%)</string>
    <string name="host_recorder_settings_range_to_cut_out">Range to cut out</string>
    <string name="host_recorder_settings_cut_out_left">Left</string>
    <string name="host_recorder_settings_cut_out_top">Top</string>
    <string name="host_recorder_settings_cut_out_right">Right</string>
    <string name="host_recorder_settings_cut_out_bottom">Bottom</string>
    <string name="host_recorder_settings_cut_out_reset">Reset</string>
    <string name="host_recorder_settings_cut_out_set">Set by delivery resolution</string>
    <string name="host_recorder_settings_cut_out_visible">Visible</string>
    <string name="host_recorder_settings_clipboard_copy">Copied to the clipboard</string>
    <string name="host_recorder_settings_audio_enable">Enable</string>
    <string name="host_recorder_settings_audio_enable_summary">Set whether to enable preview audio.</string>
    <string name="host_recorder_settings_audio_bitrate">Bitrate (bps)</string>
    <string name="host_recorder_settings_audio_sampling_rate">Sampling Rate</string>
    <string name="host_recorder_settings_audio_source">Audio Source</string>
    <string name="host_recorder_settings_audio_filter">Filter</string>
    <string name="host_recorder_settings_audio_coefficient">Coefficient</string>
    <string name="host_recorder_settings_audio_channel">Channel</string>
    <string name="host_recorder_settings_audio_mute">Mute</string>
    <string name="host_recorder_settings_audio_mute_summary">Set the mute.</string>
    <string name="host_recorder_settings_audio_echo_canceler">Echo canceler</string>
    <string name="host_recorder_settings_audio_echo_canceler_summary">Set whether to enable the echo canceller.</string>
    <string name="host_recorder_settings_audio_source_default">System Default</string>
    <string name="host_recorder_settings_audio_source_mic">Mic</string>
    <string name="host_recorder_settings_audio_source_app">App Audio</string>
    <string name="host_recorder_settings_broadcast_uri">URL</string>
    <string name="host_recorder_settings_broadcast_retry_count">Retry Count</string>
    <string name="host_recorder_settings_broadcast_retry_interval">Retry Interval (msec)</string>
    <string name="host_recorder_settings_port_motion_jpeg">MotionJPEG Settings</string>
    <string name="host_recorder_settings_port_rtsp">RTSP Settings</string>
    <string name="host_recorder_settings_port_srt">SRT Settings</string>
    <string name="host_recorder_settings_port_number">Port</string>
    <string name="host_recorder_settings_server_url">URL</string>
    <string name="host_settings_item_srt_peerlatency" translatable="false">SRTO_PEERLATENCY</string>
    <string name="host_settings_item_srt_lossmaxttl" translatable="false">SRTO_LOSSMAXTTL</string>
    <string name="host_settings_item_srt_oheadbw" translatable="false">SRTO_OHEADBW</string>
    <string name="host_settings_item_srt_inputbw" translatable="false">SRTO_INPUTBW</string>
    <string name="host_settings_item_srt_conntimeo" translatable="false">SRTO_CONNTIMEO</string>
    <string name="host_settings_item_srt_peeridletimeo" translatable="false">SRTO_PEERIDLETIMEO</string>
    <string name="pref_key_settings_srt_peerlatency" translatable="false">pref_key_settings_srt_peerlatency</string>
    <string name="pref_key_settings_srt_lossmaxttl" translatable="false">pref_key_settings_srt_lossmaxttl</string>
    <string name="gps_settings_body">Since this device plug-in uses the GPS function, please turn on the setting from the GPS setting screen of the terminal.</string>
    <string name="gps_settings_button">Open the setting screen</string>
    <string name="gps_settings_gps_detail">To use GPS from Android 6.0, you need permission for location information.\nTo use this device plug-in please allow the following permissions.\nTo cancel the permission, you can do it from the setting screen of the application.</string>
    <string name="gps_settings_gps_permission">Permission of\n location information</string>
    <string name="gps_settings_gps_permission_on">Acquired</string>
</resources>