<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/host_recorder_settings_server"
        app:iconSpaceReserved="false">

        <PreferenceScreen
            android:key="url"
            android:title="@string/host_recorder_settings_server_url"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="port"
            android:singleLine="true"
            android:title="@string/host_recorder_settings_port_number"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/host_recorder_settings_video"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="camera_preview_size"
            app:title="@string/host_recorder_settings_preview_resolution"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="preview_framerate"
            app:title="@string/host_recorder_settings_framerate"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="preview_i_frame_interval"
            app:title="@string/host_recorder_settings_i_frame_interval"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="preview_bitrate"
            app:title="@string/host_recorder_settings_bitrate"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/bitrate_mode_names"
            app:entryValues="@array/bitrate_mode_values"
            app:iconSpaceReserved="false"
            app:key="preview_bitrate_mode"
            app:title="@string/host_recorder_settings_bitrate_mode"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:iconSpaceReserved="false"
            app:key="preview_encoder"
            app:title="@string/host_recorder_settings_video_encode"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="preview_profile_level"
            app:title="@string/host_recorder_settings_video_profile_level"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="preview_use_software_encoder"
            android:title="@string/host_recorder_settings_use_software_encode"
            app:summary="@string/host_recorder_settings_use_software_encode_summary"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            app:key="preview_intra_refresh"
            app:title="@string/host_recorder_settings_intra_refresh"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/host_recorder_settings_range_to_cut_out"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="preview_clip_left"
            app:title="@string/host_recorder_settings_cut_out_left"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="preview_clip_top"
            app:title="@string/host_recorder_settings_cut_out_top"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="preview_clip_right"
            app:title="@string/host_recorder_settings_cut_out_right"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="preview_clip_bottom"
            app:title="@string/host_recorder_settings_cut_out_bottom"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <PreferenceScreen
            app:key="preview_clip_reset"
            app:title="@string/host_recorder_settings_cut_out_reset"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <PreferenceScreen
            app:key="preview_clip_set"
            app:title="@string/host_recorder_settings_cut_out_set"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="preview_clip_visible"
            android:title="@string/host_recorder_settings_cut_out_visible"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
</PreferenceScreen>