<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/host_recorder_settings_audio"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="audio_enabled"
            android:title="@string/host_recorder_settings_audio_enable"
            app:iconSpaceReserved="false"
            app:summary="@string/host_recorder_settings_audio_enable_summary" />

        <EditTextPreference
            android:defaultValue="64"
            android:key="preview_audio_bitrate"
            android:singleLine="true"
            android:title="@string/host_recorder_settings_audio_bitrate"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="@string/settings_audio_sampling_rate"
            android:entries="@array/settings_audio_sampling_rates"
            android:entryValues="@array/settings_audio_sampling_rates"
            android:key="preview_audio_sample_rate"
            android:title="@string/host_recorder_settings_audio_sampling_rate"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="1"
            android:key="preview_audio_channel"
            android:singleLine="true"
            android:title="@string/host_recorder_settings_audio_channel"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="preview_audio_aec"
            android:summary="@string/host_recorder_settings_audio_echo_canceler_summary"
            android:title="@string/host_recorder_settings_audio_echo_canceler"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>