<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/host_recorder_settings_title"
        app:iconSpaceReserved="false">

        <Preference
            app:iconSpaceReserved="false"
            app:key="recorder_settings_video"
            app:title="@string/host_recorder_settings_video" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="recorder_settings_audio"
            app:title="@string/host_recorder_settings_audio" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="recorder_settings_preview_server"
        android:title="@string/host_recorder_settings_server"
        app:iconSpaceReserved="false">

    </PreferenceCategory>

    <PreferenceCategory
        app:key="recorder_settings_broadcaster"
        android:title="@string/host_recorder_settings_broadcast"
        app:iconSpaceReserved="false">

    </PreferenceCategory>

</PreferenceScreen>