<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="120"
        android:key="@string/pref_key_settings_srt_peerlatency"
        android:singleLine="true"
        android:title="@string/host_settings_item_srt_peerlatency"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue="0"
        android:key="@string/pref_key_settings_srt_lossmaxttl"
        android:singleLine="true"
        android:title="@string/host_settings_item_srt_lossmaxttl"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

</androidx.preference.PreferenceScreen>