<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/host_recorder_settings_port_motion_jpeg"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:defaultValue="0"
            android:key="mjpeg_port"
            android:singleLine="true"
            android:title="@string/host_recorder_settings_port_number"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/host_recorder_settings_port_rtsp"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:defaultValue="1"
            android:key="rtsp_port"
            android:singleLine="true"
            android:title="@string/host_recorder_settings_port_number"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/host_recorder_settings_port_srt"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:defaultValue="1"
            android:key="srt_port"
            android:singleLine="true"
            android:title="@string/host_recorder_settings_port_number"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>