<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/title_background">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/gps_settings_body"
                android:textColor="#777777"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btn_settings_open"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_blue"
                android:text="@string/gps_settings_button"
                android:textColor="#FFFFFF"/>

            <LinearLayout
                android:id="@+id/gps_permission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/gps_settings_gps_detail"
                    android:textColor="#666666"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="2"
                        android:text="@string/gps_settings_gps_permission"
                        android:textColor="#000000"
                        android:textSize="18dp"/>

                    <Button
                        android:id="@+id/button_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_blue"
                        android:text="@string/gps_settings_gps_permission_on"
                        android:textColor="#FFFFFF"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>